z-index fixed

--- a/media/index.css
+++ b/media/index.css
@@ -8,6 +8,7 @@
     justify-content: space-between;
     position: sticky;
     top: 10px;
+    z-index: 1800;
 }
 li a{
     color: black;
